compiler/testData/diagnostics/tests/when/testTask/EmptyWhen.kt
fun foo(x: Boolean) {
    <!NO_ELSE_IN_WHEN!>when<!> (x) {

    }
}
